Fixed issue #27 [UI breaks in mobile browser]

--- a/frontend/src/app/components/about/about.component.scss
+++ b/frontend/src/app/components/about/about.component.scss
@@ -2,3 +2,7 @@
     height: 80vh;
     align-items: center
 }
+
+a{
+    word-wrap: break-word;
+}
